
# project "ImGui"
#     kind "Staticlib"
#     language "C++"
#     cppdialect "C++17"
#     staticruntime "On"

#     targetdir("bin/" .. outputdir .. "/%{prj.name}")
#     objdir("bin-int/" .. outputdir .. "/%{prj.name}")

#     files
#     {
#         "imconfig.h",
#         "imgui.h",
#         "imgui.cpp",
#         "imgui_draw.cpp",
#         "imgui_internal.h",
#         "imgui_widgets.cpp",
#         "imstb_rectpack.h",
#         "imstb_textedit.h",
#         "imstb_truetype.h",
#         "imgui_demo.cpp"
#     }

#     filter "system:windows"
#         systemversion "latest"

#     filter { "system:windows", "configurations:Debug" }
#         runtime "Debug"

#     filter { "system:windows", "configurations:Release" }
#         runtime "Release"
#         optimize "On"

#     filter { "system:windows", "configurations:Dist" }
#         runtime "Release"
#         optimize "On"
project(ImGui)

file(GLOB IMGUI_SRCS "*.cpp")
file(GLOB IMGUI_HDRS "*.h")

add_library(
    ${PROJECT_NAME} STATIC
    "imgui_demo.cpp"
    "imgui_draw.cpp"
    "imgui_tables.cpp"
    "imgui_widgets.cpp"
    "imgui.cpp"
    ${IMGUI_HDRS}
)
